tests/baselines/reference/decoratorOnClassMethod11(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decoratorOnClassMethod11.ts(5,11): error TS2331: 'this' cannot be referenced in a module or namespace body.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decoratorOnClassMethod11.ts (1 errors) ====
    namespace M {
        class C {
            decorator(target: Object, key: string): void { }
    
            @(this.decorator)
              ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
            method() { }
        }
    }